--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -26,24 +26,28 @@
         <!-- TODO (01) Add textSize and textColor attributes to the title and
              subtitle TextViews. -->
         <TextView
-                android:id="@+id/title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/about_google_developer_groups"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/image"
-                app:layout_constraintEnd_toStartOf="@+id/end_grid"
-                app:layout_constraintStart_toStartOf="@+id/start_grid"/>
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/about_google_developer_groups"
+            android:textColor="#673AB7"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toStartOf="@+id/end_grid"
+            app:layout_constraintStart_toStartOf="@+id/start_grid"
+            app:layout_constraintTop_toBottomOf="@id/image" />
 
         <TextView
-                android:id="@+id/intro_text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/title"
-                app:layout_constraintStart_toStartOf="@+id/start_grid"
-                app:layout_constraintEnd_toStartOf="@+id/end_grid"
-                android:text="@string/gdg_description_long"
-                android:layout_marginTop="8dp"/>
+            android:id="@+id/intro_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/gdg_description_long"
+            android:textColor="#3F51B5"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toStartOf="@+id/end_grid"
+            app:layout_constraintStart_toStartOf="@+id/start_grid"
+            app:layout_constraintTop_toBottomOf="@id/title" />
 
         <TextView
                 android:id="@+id/subtitle"
