--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,10 +10,16 @@
         <item name="fontFamily">@font/lobster_two</item>
     </style>
 
-    <!-- TODO (01) define a TextAppearance.Title style that extends TextAppearance.MaterialComponents.Headline6,
+    <!-- DONE (01) define a TextAppearance.Title style that extends TextAppearance.MaterialComponents.Headline6,
          and give it the same attributes you used for the title TextView home_fragment.xml. -->
-
-    <!-- TODO (02) define a TextAppearance.Subtitle style that extends TextAppearance.Title, and give
+    <style name="Title" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textColor">#555555</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+    <!-- DONE (02) define a TextAppearance.Subtitle style that extends TextAppearance.Title, and give
          it the same attributes you used for the subtitle TextView in home_fragment.xml. -->
+    <style name="Subtitle" parent="Title">
+        <item name="android:textSize">18sp</item>
+    </style>
 
 </resources>
