--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <!-- TODO (03) Add a custom attribute to AppTheme to replace textAppearanceHeadline6. -->
+    <!-- DONE (03) Add a custom attribute to AppTheme to replace textAppearanceHeadline6. -->
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
@@ -9,9 +9,11 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:fontFamily">@font/lobster_two</item>
         <item name="fontFamily">@font/lobster_two</item>
+        <item name="textAppearanceHeadline6">@style/CustomHeadline6</item>
     </style>
 
-    <!-- TODO (02) Delete the Title and Subtitle styles. -->
+    <!-- DONE (02) Delete the Title and Subtitle styles. -->
+    <!--
     <style name="TextAppearance.Title" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">#555555</item>
@@ -20,7 +22,10 @@
     <style name="TextAppearance.Subtitle" parent="TextAppearance.Title" >
         <item name="android:textSize">18sp</item>
     </style>
+    -->
 
-    <!-- TODO (04) Define a CustomHeadline6 style that extends the default Material Design style. -->
-
+    <!-- DONE (04) Define a CustomHeadline6 style that extends the default Material Design style. -->
+    <style name="CustomHeadline6" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textSize">18sp</item>
+    </style>
 </resources>
