--- a/app/src/main/res/layout/add_gdg_fragment.xml
+++ b/app/src/main/res/layout/add_gdg_fragment.xml
@@ -121,33 +121,31 @@
                     app:layout_constraintBottom_toTopOf="@+id/EditTextWhy"
                     android:singleLine="true"/>
 
-            <!-- TODO (01) Uncomment the LinearLayout code surrounding labelTextWhy and EditTextWhy. -->
-            <!--wrap in a layout to group-->
-            <!--<LinearLayout -->
-            <!--android:id="@+id/contentGroup"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:focusable="true"-->
-            <!--app:layout_constraintTop_toBottomOf="@id/EditTextRegion"-->
-            <!--android:orientation="vertical"-->
-            <!--app:layout_constraintStart_toStartOf="@+id/EditTextRegion"-->
-            <!--app:layout_constraintEnd_toEndOf="@+id/EditTextRegion"-->
-            <!--android:layout_marginTop="16dp"-->
-            <!--app:layout_constraintBottom_toTopOf="@+id/button"-->
-            <!--android:layout_marginBottom="8dp">-->
+            <!-- DONE (01) Uncomment the LinearLayout code surrounding labelTextWhy and EditTextWhy. -->
+            <!--wrap in a layout to group -->
+            <LinearLayout
+                android:id="@+id/contentGroup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:focusable="true"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toTopOf="@+id/button"
+                app:layout_constraintEnd_toEndOf="@+id/EditTextRegion"
+                app:layout_constraintStart_toStartOf="@+id/EditTextRegion"
+                app:layout_constraintTop_toBottomOf="@id/EditTextRegion">
 
-            <!-- TODO (02) Remove layoutMargins from  labelTextWhy and EditTextWhy. -->
+                <!-- DONE (02) Remove layoutMargins from  labelTextWhy and EditTextWhy. -->
             <TextView
                     android:id="@+id/labelTextWhy"
                     android:text="@string/motivation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginStart="32dp"
                     android:contentDescription="@string/motivation"
                     app:layout_constraintTop_toBottomOf="@+id/EditTextRegion"
                     android:layout_marginBottom="1dp"
-                    app:layout_constraintBottom_toTopOf="@+id/EditTextWhy"
+                app:layout_constraintBottom_toTopOf="@+id/contentGroup"
                     app:layout_constraintStart_toStartOf="parent"/>
 
             <EditText
@@ -157,16 +155,12 @@
                     android:inputType="textMultiLine"
                     android:hint="@string/enter_motivation"
                     android:ems="10"
-                    app:layout_constraintTop_toBottomOf="@+id/EditTextRegion"
+                app:layout_constraintBottom_toTopOf="@+id/button"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toTopOf="@+id/button"
-                    android:layout_marginTop="32dp"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginBottom="8dp"/>
+                app:layout_constraintTop_toBottomOf="@+id/contentGroup" />
 
-            <!--</LinearLayout>-->
+            </LinearLayout>
 
             <!-- TODO (04) Update the button’s top constraint to reflect the new wrapper layout
                  instead of the individual elements. -->
